plugins {
    id 'java'
    id 'application'
    id 'com.google.cloud.tools.jib'
    id 'org.hidetake.swagger.generator' version '2.18.1'
    id "de.undercouch.download" version "4.0.2"
}

mainClassName = 'com.strapdata.strapkop.Application'


jar {
    manifest {
        attributes "Main-Class": mainClassName
    }

    zip64=true
    from {
        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

jib {
    from {
        // TODO make it configurable to allow bash exec ???
        image = 'openjdk:alpine'
        //image = 'gcr.io/distroless/java:8'
    }
    to {
        image = dockerImagePrefix + "operator" + dockerImageSuffix
        tags = [ version, project.gitCommitHash, 'latest']
        // osxkeychain does not work on linux and CI environments
        // credHelper = 'osxkeychain'

        auth {
            username = registryUsername
            password = registryPassword
        }
    }
    container {
        // to override JVM_FLAGS during deployment use : -e "JAVA_TOOL_OPTIONS=<JVM flags>"
        // see : https://github.com/GoogleContainerTools/jib/blob/master/docs/faq.md#how-do-i-set-parameters-for-my-image-at-runtime
        jvmFlags = ['-Xmx1024m',
                    '-XX:+UnlockExperimentalVMOptions', '-XX:+UseCGroupMemoryLimitForHeap', '-XX:MaxRAMFraction=2',
                    '-XX:+ExitOnOutOfMemoryError',
                    '-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005',
                    '-Dmicronaut.environments=$MICRONAUT_ENV',
                    '-Dcom.sun.management.jmxremote',
                    '-Dcom.sun.management.jmxremote.port=7199',
                    '-Dcom.sun.management.jmxremote.rmi.port=7199',
                    '-Dcom.sun.management.jmxremote.ssl=false',
                    '-Dcom.sun.management.jmxremote.authenticate=false',
                    '-Djava.rmi.server.hostname=127.0.0.1'
        ]
        mainClass = mainClassName
        ports = ['8080']
        labels = [ description:'Strapkop Elassandra operator for K8S' ]
    }
    extraDirectories {
        // add the source code of the thirdparty libraries under GPL & LGPL license
        paths = ["../../build/thirdparty-libs", "../../build/reports/dependency-license"]
    }
    allowInsecureRegistries = rootProject.allowInsecureRegistries
}
tasks.jibDockerBuild.dependsOn project(':java:backup').jar
tasks.jibDockerBuild.dependsOn project(':java:model').jar

compileJava {

    sourceCompatibility = 1.8
    targetCompatibility = 1.8
    options.encoding = 'UTF-8'
    options.compilerArgs = [ '-parameters', '-Xlint:all', '-Xlint:-processing', '-Xlint:-serial', '-Werror']
}

compileTestJava {
    options.compilerArgs += '-parameters'
}

dependencies {
    compile 'org.projectlombok:lombok:1.18.4'
    annotationProcessor "org.projectlombok:lombok:1.18.4"

    annotationProcessor "io.micronaut:micronaut-security"
    annotationProcessor "io.micronaut:micronaut-inject-java"
    annotationProcessor "io.micronaut:micronaut-validation"
    annotationProcessor "io.micronaut.configuration:micronaut-openapi"

    compile "com.xebia:jackson-lombok:1.1"

    compile "io.micronaut:micronaut-security-session"
    compile "io.micronaut:micronaut-http-client"
    compile "io.micronaut:micronaut-http-server-netty"
    compile "io.micronaut:micronaut-inject"
    compile "io.micronaut:micronaut-inject-java"
    compile "io.micronaut:micronaut-validation"
    compile "io.micronaut:micronaut-runtime"
    compile "io.micronaut:micronaut-views"
    compile "io.micronaut:micronaut-multitenancy"

    compile "io.micronaut:micronaut-management"
    compile "io.micronaut.configuration:micronaut-micrometer-core"
    compile 'io.micronaut.configuration:micronaut-micrometer-registry-prometheus'
    
    compile "io.micronaut.configuration:micronaut-cassandra"


    testAnnotationProcessor "io.micronaut:micronaut-inject-java"
    compile "javax.annotation:javax.annotation-api"

    compile "io.swagger.core.v3:swagger-annotations"

    compile "com.github.akarnokd:rxjava2-interop:0.13.5"

    compile "io.micronaut:micronaut-security-jwt"

    compile "io.kubernetes:client-java:4.0.0"
    compile "javax.inject:javax.inject:1"
    runtime "ch.qos.logback:logback-classic:1.2.3"
    compile group: 'com.google.guava', name: 'guava', version: '23.0'

    compile "com.datastax.cassandra:cassandra-driver-core:3.7.1"

    compile("com.strapdata.elasticsearch.plugin.enterprise:strapdata-license:$javaElassandraVersion") {
        exclude group: 'com.strapdata.elasticsearch', module: 'elasticsearch'
    }

    compile project(':java:dns')
    compile project(':java:model')
    compile project(':java:backup')
    compile project(':java:k8s-addons')

    testCompile "org.mockito:mockito-core:2.+"
}
